--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "PathTo90",
+    "name": "Grades Projection",
     "version": "1.0",
     "description": "Scrapes grades from Brightspace and compiles it into more user-friendly interactive data",
     "permissions": [
